[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Scenes/UI/About.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Script/UI/StartMenu.gd" type="Script" id=2]
[ext_resource path="res://Game/Scenes/UI/Options.tscn" type="PackedScene" id=3]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="TextureRect" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartGame" type="TextureButton" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 1024.0
margin_bottom = 237.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Options" type="TextureButton" parent="VBoxContainer"]
margin_top = 241.0
margin_right = 1024.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="About" type="TextureButton" parent="VBoxContainer"]
margin_top = 362.0
margin_right = 1024.0
margin_bottom = 479.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Quit" type="TextureButton" parent="VBoxContainer"]
margin_top = 483.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Options" parent="." instance=ExtResource( 3 )]
margin_left = 1024.0
margin_right = 1024.0

[node name="About" parent="." instance=ExtResource( 1 )]
margin_left = 1024.0
margin_right = 1024.0

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
